--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,25 +10,31 @@
 
 <body>
   <header class="display-flex justify-space-between align-center p-2">
+    <nav>
+      <a href="/">HOME</a>
+    {{#if logged_in}}
+      <a href="/">DASHBOARD</a>
+      <button class="btn" id="nav-logout">LOGOUT</button>
+    {{else}}
+      <a href="/login">LOGIN</a>
+    {{/if}}
+    </nav>
+  </header>
+  <main class="container container-fluid mt-5">
+    
     <h1>
       The Tech Blog
     </h1>
-    {{#if logged_in}}
-    <nav>
-      <button class="btn" id="logout">logout</button>
-    </nav>
-    {{/if}}
-  </header>
-  <main class="container container-fluid mt-5">
+
     {{{ body }}}
   </main>
   <footer>
       
   </footer>
 
-  {{#if logged_in}}
-  <script src="/js/logout.js"></script>
-  {{/if}}
+  <script src="/js/login.js"></script>
+  <script src="/js/register.js"></script>
+  
 </body>
 
 
