--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
     <nav>
       <a href="/">HOME</a>
     {{#if logged_in}}
-      <a href="/">DASHBOARD</a>
+      <a href="/dashboard">DASHBOARD</a>
       <button class="btn" id="nav-logout">LOGOUT</button>
     {{else}}
       <a href="/login">LOGIN</a>
@@ -29,6 +29,7 @@
 
   <script src="/js/login.js"></script>
   <script src="/js/register.js"></script>
+  <script src="/js/comment.js"></script>
   
 </body>
 
