--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,6 +1,10 @@
 <!-- display registration form if user is not logged in -->
 
-<h1>Registration Page</h1>
+<div class="title-bar">
+    <h1 class="container py-2">User Registration</h1>
+</div>
+
+<div class="user-registration container">
 
 {{#if logged_in}}
 
@@ -11,13 +15,12 @@
 {{else}}
 
     <div class='registration-form-outer'>
-      <h2>REGISTER</h2>
       <form class='form registration-form'>
         <div class='form-group'>
-          <input class='form-input' type='text' id='username-signup' placeholder="username" />
+          <input class='form-input col-4' type='text' id='username-signup' placeholder="username" />
         </div>
         <div class='form-group'>
-          <input class='form-input' type='password' id='password-signup' placeholder="password" />
+          <input class='form-input col-4' type='password' id='password-signup' placeholder="password" />
         </div>
         <div class='form-group'>
           <button class='btn' type='submit'>REGISTER</button>
@@ -29,3 +32,5 @@
     </div>
     
 {{/if}}
+
+</div>
