--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,18 +1,24 @@
-<h1>Dashboard</h1>
+<div class="title-bar">
+    <h1 class="container py-2">Dashboard</h1>
+</div>
+
+<div class="blogroll-posts container">
 
 <!-- Loop through each of the user's posts -->
 {{#each posts as |post| }}
-    <div>
-       <h3 class="post-title">Title: {{post.title}} <span>Posted by {{post.user.username}} on {{format_date post.date_created}}</span></h3>
+    <div class="blogroll-post user-post">
+       <h3 class="post-title display-flex justify-space-between-lg align-center"><span>{{post.title}}</span> <span class="meta">Posted by {{post.user.username}} on {{format_date post.date_created}}</span></h3>
        <div class="post-content">{{post.description}}</div>
-
-        <ul id="pc-{{post.id}}" class="post-comments">
-            {{#each comments as |comment|}}
-            <li>{{comment.description}} <div>&mdash; {{comment.user.username}}, {{format_date comment.date_created}}</div></li>
-            {{/each}}
-        </ul>
-
+        <div class="post-comments">
+            <ul id="pc-{{post.id}}" class="post-comments">
+                {{#each comments as |comment|}}
+                <li>{{comment.description}} <div class="meta">&mdash; {{comment.user.username}}, {{format_date comment.date_created}}</div></li>
+                {{/each}}
+            </ul>
+        </div>
     </div>
 {{/each}}
 
 <button class="btn" id="create-post">+ New Post</button>
+
+</div>
