--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,18 +1,20 @@
-<h1>The Tech Blog</h1>
+<div class="title-bar">
+    <h1 class="container py-2">The Tech Blog</h1>
+</div>
 
-<div class="blogroll-posts">
+<div class="blogroll-posts container">
     <!-- Loop through each post in the database -->
     {{#each posts as |post| }}
         <div class="blogroll-post">
-        <h3 class="post-title" data-id="{{post.id}}">Title: {{post.title}} <span>Posted by {{post.user.username}} on {{format_date post.date_created}}</span></h3>
-        <div class="post-content">{{post.description}}</div>
-
-        <ul id="pc-{{post.id}}" class="post-comments">
-            {{#each comments as |comment|}}
-            <li>{{comment.description}} <div>&mdash; {{comment.user.username}}, {{format_date comment.date_created}}</div></li>
-            {{/each}}
-        </ul>
-
+            <h3 class="post-title display-flex justify-space-between-lg align-center" data-id="{{post.id}}"><span>{{post.title}}</span> <span class="meta">Posted by {{post.user.username}} on {{format_date post.date_created}}</span></h3>
+            <div class="post-content">{{post.description}}</div>
+            <div class="post-comments">
+                <ul id="pc-{{post.id}}" class="post-comments">
+                    {{#each comments as |comment|}}
+                    <li>{{comment.description}} <div class="meta">&mdash; {{comment.user.username}}, {{format_date comment.date_created}}</div></li>
+                    {{/each}}
+                </ul>
+            </div>
         </div>
     {{/each}}
 </div>
