--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>User Registry</title>
+  <title>The Tech Blog</title>
   <link rel="stylesheet" href="/css/jass.css">
   <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -30,6 +30,7 @@
 
   <script src="/js/login.js"></script>
   <script src="/js/register.js"></script>
+  <script src="/js/post.js"></script>
   <script src="/js/comment.js"></script>
   
 </body>
