--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -5,20 +5,49 @@
 </div>
 
 <div class="create-a-post container">
-  
-      <form class='form create-a-post-form'>
-        <div class='form-group'>
-          <input class='form-input' type='text' id='newpost-title' placeholder="title" />
-        </div>
-        <div class='form-group'>
-          <textarea class='form-input' id='newpost-body'></textarea>
-        </div>
-        <div class='form-group'>
-          <button class='btn' type='submit'>SAVE POST</button>
-        </div>
-        <div class='form-group'>
-          <a href="/dashboard">cancel</a>
-        </div>
+
+
+        {{#if posts}}
+          {{#each posts as |post|}}
+
+            <form class='form update-a-post-form' data-id="{{post.id}}" data-func="update">
+
+            <div class='form-group'>
+              <input class='form-input' type='text' id='newpost-title' value='{{post.title}}' placeholder='title' />
+            </div>
+      
+            <div class='form-group'>
+              <textarea class='form-input' id='newpost-body'>{{post.description}}</textarea>
+            </div>
+
+          {{/each}}
+
+            <div class='form-group'>
+                <button class='btn' type='submit'>UPDATE POST</button>
+            </div>
+
+         {{else}}
+
+          <form class="form create-a-post-form" data-func="save">
+
+            <div class='form-group'>
+              <input class='form-input' type='text' id='newpost-title' placeholder='title' />
+            </div>
+      
+            <div class='form-group'>
+              <textarea class='form-input' id='newpost-body'></textarea>
+            </div>
+
+            <div class='form-group'>
+              <button class='btn' type='submit'>SAVE POST</button>
+            </div>
+
+          {{/if}}
+
+            <div class='form-group'>
+              <a href="/dashboard">cancel</a>
+            </div>
+
       </form>
 
 </div>
