--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -23,6 +23,6 @@
     </div>
 {{/each}}
 
-<button class="btn" id="create-post">+ New Post</button>
+<button class="btn" id="create-post">+ ADD POST</button>
 
 </div>
