--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,7 +2,7 @@
     <h1 class="container py-2">The Tech Blog</h1>
 </div>
 
-<div class="blogroll-posts container">
+<div class="container blogroll-posts blogroll-posts-home">
     <!-- Loop through each post in the database -->
     {{#each posts as |post| }}
         <div class="blogroll-post">
@@ -14,6 +14,9 @@
                     <li>{{comment.description}} <div class="meta">&mdash; {{comment.user.username}}, {{format_date comment.date_created}}</div></li>
                     {{/each}}
                 </ul>
+            </div>
+            <div class="post-comment-button">
+                <button class="btn comment-btn" data-id="{{post.id}}">+ ADD COMMENT</button>
             </div>
         </div>
     {{/each}}
