--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -23,6 +23,8 @@
     </div>
 {{/each}}
 
-<button class="btn" id="create-post">+ ADD POST</button>
+<div class="text-center">
+    <button class="btn col-2" id="create-post">+ ADD POST</button>
+</div>
 
 </div>
