Refactoring, README updates and rerouted registration and add-post

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,4 +1,5 @@
 <!-- display registration form if user is not logged in -->
+<!-- otherwise they get to create new posts as a registered user -->
 
 <div class="title-bar">
     <h1 class="container py-2">Create a Post</h1>
