--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,6 +18,7 @@
       <button class="btn" id="nav-logout">LOGOUT</button>
     {{else}}
       <a href="/login">LOGIN</a>
+      <a href="/register">REGISTER</a>
     {{/if}}
     </nav>
   </header>
